Fixed rows being messup due to line wrap. Hope you dont have any long entry names since I wont fix that

--- a/app/project/[slug]/entries.module.css
+++ b/app/project/[slug]/entries.module.css
@@ -5,3 +5,7 @@
 .listItem {
     list-style-type: none;
 }
+
+.list {
+    padding: 0
+}
